Implemented CRUD operations for users through frontend

--- a/src/main/resources/vue/layout.html
+++ b/src/main/resources/vue/layout.html
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+    <script src="https://kit.fontawesome.com/70a33e2b2a.js" crossorigin="anonymous"></script>
     <!-- Javalin’s Vue plugin will scan your /resources/vue folder and put -->
     <!-- all your Vue components into componentRegistration -->
     <script>
