--- a/src/main/resources/vue/layout.html
+++ b/src/main/resources/vue/layout.html
@@ -15,6 +15,10 @@
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/70a33e2b2a.js" crossorigin="anonymous"></script>
+<!--    form wizard-->
+    <script src="https://unpkg.com/vue3-form-wizard"></script>
+    <link rel="stylesheet" href="https://unpkg.com/vue3-form-wizard/dist/style.css">
+
     <!-- Javalin’s Vue plugin will scan your /resources/vue folder and put -->
     <!-- all your Vue components into componentRegistration -->
     <script>
